# emtools

./: .gitmodules  CMakeLists.txt  gen.sh.in
EM-SuccinctIrreducible-0.1.0/: .gitignore  CMakeLists.txt  README
EM-SuccinctIrreducible-0.1.0/src/: Makefile  main_construct_lcp_array.cpp  main_construct_lcp_from_plcp.cpp  main_construct_plcp_bitvector.cpp  uint40.hpp  uint48.hpp
EM-SuccinctIrreducible-0.1.0/src/em_succinct_irreducible_src/: compute_B.hpp  compute_lcp_array.hpp  compute_lcp_from_plcp.hpp  compute_plcp_bitvector.hpp  distribute_pairs_and_compute_C.hpp  process_halfsegment_pairs.hpp  set_bits.hpp  utils.cpp  utils.hpp
EM-SuccinctIrreducible-0.1.0/src/em_succinct_irreducible_src/io/: async_multi_stream_writer.hpp  async_multipart_file_writer.hpp  async_multipart_multifile_reader.hpp  async_stream_reader.hpp  async_stream_writer.hpp
LCPscan-0.2.0/: CMakeLists.txt  LICENCE  NEWS  README
LCPscan-0.2.0/src/: CMakeLists.txt  main.cc
LCPscan-0.2.0/src/lcpscan_src/: CMakeLists.txt  async_stream_reader.h  lcpscan.h  merge.h  radixsort.h  radixsort_stxxl.h  sort.cc  sort.h  stats.h  stream.h  stxxl_utils.cc  stxxl_utils.h  tuples.h  utils.cc  utils.h
LCPscan-0.2.0/src/stxxl/: CMakeLists.txt
LCPscan-0.2.0/src/stxxl/include/stxxl/bits/: parallel.h
LCPscan-0.2.0/src/stxxl/include/stxxl/bits/containers/: sorter.h
LCPscan-0.2.0/src/stxxl/include/stxxl/bits/mng/: adaptor.h
LCPscan-0.2.0/src/stxxl/include/stxxl/bits/stream/: sort_stream.h
LCPscan-0.2.0/src/stxxl/lib/: CMakeLists.txt
LCPscan-0.2.0/src/stxxl/utils/: CMakeLists.txt  example.cpp
pSAscan-0.1.0/: .gitignore  CMakeLists.txt
pSAscan-0.1.0/src/: Makefile  tags
stxxltools/: CMakeLists.txt  README.md  isaandbwt.cpp  readplcp.cpp  standardize.cpp  unstandardize.cpp
stxxltools/sdsl/: bits.hpp
